src/antlr/StcParser.cpp

// Generated from Stc.g4 by ANTLR 4.13.1


#include "StcListener.h"
#include "StcVisitor.h"

#include "StcParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct StcParserStaticData final {
  StcParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  StcParserStaticData(const StcParserStaticData&) = delete;
  StcParserStaticData(StcParserStaticData&&) = delete;
  StcParserStaticData& operator=(const StcParserStaticData&) = delete;
  StcParserStaticData& operator=(StcParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag stcParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
StcParserStaticData *stcParserStaticData = nullptr;

void stcParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (stcParserStaticData != nullptr) {
    return;
  }
#else
  assert(stcParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<StcParserStaticData>(
    std::vector<std::string>{
      "prog", "functionDef", "type", "statement", "block", "newStructAssign", 
      "newOperator", "struct", "structElement", "structBody", "ifBlock", 
      "elseBlock", "repeatBlock", "arguments", "operation", "operaor", "stackOperation", 
      "push", "arrayElement", "arrayBase", "arrayIndexShift", "arrayIndex", 
      "capacity", "array", "arrayDescriber", "arrayNew", "argument", "varAssign", 
      "varAssignIdentifier", "varType", "varReference", "varIdentifier", 
      "identifier"
    },
    std::vector<std::string>{
      "", "'fun'", "'<'", "'>'", "'{'", "'}'", "':'", "'if'", "'else'", 
      "'repeat'", "'('", "')'", "'dup'", "'rot'", "'swap'", "'pop'", "'over'", 
      "'c:'", "'new'", "'struct'", "'!'", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "':='", "'&'", "", "'['", "']'", "'arr'", 
      "'@'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "NEW", "STRUCT_DEFINITION", "STACK_PREVENTION", "NUMBER", "SIGNED_NUMBER", 
      "FLOAT", "SIGNED_FLOAT", "FLOAT_E", "SIGNED_FLOAT_E", "BIN_NUMBER", 
      "HEX_NUMBER", "STRING", "CHAR", "BOOL", "SIMPLE_TYPE", "LOGIC_OPERATOR", 
      "ARITHMETIC_OPERATOR", "ASSIGN_OPERATOR", "REFERENCE_OPERATOR", "BUILD_IN_OPERATOR", 
      "ARRAY_OPEN", "ARRAY_CLOSE", "ARRAY_OPERATOR", "AT", "ID", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  stcParserStaticData = staticData.release();
}

}

StcParser::StcParser(TokenStream *input) : StcParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

StcParser::StcParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  StcParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *stcParserStaticData->atn, stcParserStaticData->decisionToDFA, stcParserStaticData->sharedContextCache, options);
}

StcParser::~StcParser() {
  delete _interpreter;
}

const atn::ATN& StcParser::getATN() const {
  return *stcParserStaticData->atn;
}

std::string StcParser::getGrammarFileName() const {
  return "Stc.g4";
}

const std::vector<std::string>& StcParser::getRuleNames() const {
  return stcParserStaticData->ruleNames;
}

const dfa::Vocabulary& StcParser::getVocabulary() const {
  return stcParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView StcParser::getSerializedATN() const {
  return stcParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

StcParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StcParser::ProgContext::EOF() {
  return getToken(StcParser::EOF, 0);
}

std::vector<StcParser::FunctionDefContext *> StcParser::ProgContext::functionDef() {
  return getRuleContexts<StcParser::FunctionDefContext>();
}

StcParser::FunctionDefContext* StcParser::ProgContext::functionDef(size_t i) {
  return getRuleContext<StcParser::FunctionDefContext>(i);
}

std::vector<StcParser::StructContext *> StcParser::ProgContext::struct_() {
  return getRuleContexts<StcParser::StructContext>();
}

StcParser::StructContext* StcParser::ProgContext::struct_(size_t i) {
  return getRuleContext<StcParser::StructContext>(i);
}


size_t StcParser::ProgContext::getRuleIndex() const {
  return StcParser::RuleProg;
}

void StcParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void StcParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


std::any StcParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

StcParser::ProgContext* StcParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, StcParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(68);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case StcParser::T__0: {
          setState(66);
          functionDef();
          break;
        }

        case StcParser::STRUCT_DEFINITION: {
          setState(67);
          struct_();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(70); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == StcParser::T__0

    || _la == StcParser::STRUCT_DEFINITION);
    setState(72);
    match(StcParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDefContext ------------------------------------------------------------------

StcParser::FunctionDefContext::FunctionDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StcParser::FunctionDefContext::ID() {
  return getToken(StcParser::ID, 0);
}

StcParser::BlockContext* StcParser::FunctionDefContext::block() {
  return getRuleContext<StcParser::BlockContext>(0);
}

StcParser::ArgumentsContext* StcParser::FunctionDefContext::arguments() {
  return getRuleContext<StcParser::ArgumentsContext>(0);
}


size_t StcParser::FunctionDefContext::getRuleIndex() const {
  return StcParser::RuleFunctionDef;
}

void StcParser::FunctionDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDef(this);
}

void StcParser::FunctionDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDef(this);
}


std::any StcParser::FunctionDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitFunctionDef(this);
  else
    return visitor->visitChildren(this);
}

StcParser::FunctionDefContext* StcParser::functionDef() {
  FunctionDefContext *_localctx = _tracker.createInstance<FunctionDefContext>(_ctx, getState());
  enterRule(_localctx, 2, StcParser::RuleFunctionDef);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(StcParser::T__0);
    setState(75);
    match(StcParser::ID);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == StcParser::T__9) {
      setState(76);
      arguments();
    }
    setState(79);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

StcParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StcParser::TypeContext::SIMPLE_TYPE() {
  return getToken(StcParser::SIMPLE_TYPE, 0);
}

tree::TerminalNode* StcParser::TypeContext::ID() {
  return getToken(StcParser::ID, 0);
}

StcParser::TypeContext* StcParser::TypeContext::type() {
  return getRuleContext<StcParser::TypeContext>(0);
}


size_t StcParser::TypeContext::getRuleIndex() const {
  return StcParser::RuleType;
}

void StcParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void StcParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


std::any StcParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

StcParser::TypeContext* StcParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, StcParser::RuleType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(81);
      match(StcParser::SIMPLE_TYPE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(82);
      match(StcParser::ID);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(83);
      match(StcParser::SIMPLE_TYPE);
      setState(84);
      match(StcParser::T__1);
      setState(87);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
      case 1: {
        setState(85);
        type();
        break;
      }

      case 2: {
        setState(86);
        match(StcParser::ID);
        break;
      }

      default:
        break;
      }
      setState(89);
      match(StcParser::T__2);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

StcParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

StcParser::NewStructAssignContext* StcParser::StatementContext::newStructAssign() {
  return getRuleContext<StcParser::NewStructAssignContext>(0);
}

StcParser::NewOperatorContext* StcParser::StatementContext::newOperator() {
  return getRuleContext<StcParser::NewOperatorContext>(0);
}

StcParser::VarReferenceContext* StcParser::StatementContext::varReference() {
  return getRuleContext<StcParser::VarReferenceContext>(0);
}

StcParser::VarAssignContext* StcParser::StatementContext::varAssign() {
  return getRuleContext<StcParser::VarAssignContext>(0);
}

StcParser::ArrayIndexContext* StcParser::StatementContext::arrayIndex() {
  return getRuleContext<StcParser::ArrayIndexContext>(0);
}

StcParser::ArrayNewContext* StcParser::StatementContext::arrayNew() {
  return getRuleContext<StcParser::ArrayNewContext>(0);
}

StcParser::ArrayContext* StcParser::StatementContext::array() {
  return getRuleContext<StcParser::ArrayContext>(0);
}

StcParser::OperationContext* StcParser::StatementContext::operation() {
  return getRuleContext<StcParser::OperationContext>(0);
}

StcParser::StackOperationContext* StcParser::StatementContext::stackOperation() {
  return getRuleContext<StcParser::StackOperationContext>(0);
}

StcParser::PushContext* StcParser::StatementContext::push() {
  return getRuleContext<StcParser::PushContext>(0);
}

StcParser::IdentifierContext* StcParser::StatementContext::identifier() {
  return getRuleContext<StcParser::IdentifierContext>(0);
}

StcParser::FunctionDefContext* StcParser::StatementContext::functionDef() {
  return getRuleContext<StcParser::FunctionDefContext>(0);
}

StcParser::IfBlockContext* StcParser::StatementContext::ifBlock() {
  return getRuleContext<StcParser::IfBlockContext>(0);
}

StcParser::RepeatBlockContext* StcParser::StatementContext::repeatBlock() {
  return getRuleContext<StcParser::RepeatBlockContext>(0);
}


size_t StcParser::StatementContext::getRuleIndex() const {
  return StcParser::RuleStatement;
}

void StcParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void StcParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any StcParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

StcParser::StatementContext* StcParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, StcParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(106);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(92);
      newStructAssign();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(93);
      newOperator();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(94);
      varReference();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(95);
      varAssign();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(96);
      arrayIndex();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(97);
      arrayNew();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(98);
      array();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(99);
      operation();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(100);
      stackOperation();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(101);
      push();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(102);
      identifier();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(103);
      functionDef();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(104);
      ifBlock();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(105);
      repeatBlock();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

StcParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<StcParser::StatementContext *> StcParser::BlockContext::statement() {
  return getRuleContexts<StcParser::StatementContext>();
}

StcParser::StatementContext* StcParser::BlockContext::statement(size_t i) {
  return getRuleContext<StcParser::StatementContext>(i);
}


size_t StcParser::BlockContext::getRuleIndex() const {
  return StcParser::RuleBlock;
}

void StcParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void StcParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any StcParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

StcParser::BlockContext* StcParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 8, StcParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(108);
    match(StcParser::T__3);
    setState(110); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(109);
      statement();
      setState(112); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6047313293954) != 0));
    setState(114);
    match(StcParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NewStructAssignContext ------------------------------------------------------------------

StcParser::NewStructAssignContext::NewStructAssignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StcParser::NewStructAssignContext::NEW() {
  return getToken(StcParser::NEW, 0);
}

std::vector<tree::TerminalNode *> StcParser::NewStructAssignContext::ID() {
  return getTokens(StcParser::ID);
}

tree::TerminalNode* StcParser::NewStructAssignContext::ID(size_t i) {
  return getToken(StcParser::ID, i);
}

tree::TerminalNode* StcParser::NewStructAssignContext::ASSIGN_OPERATOR() {
  return getToken(StcParser::ASSIGN_OPERATOR, 0);
}


size_t StcParser::NewStructAssignContext::getRuleIndex() const {
  return StcParser::RuleNewStructAssign;
}

void StcParser::NewStructAssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNewStructAssign(this);
}

void StcParser::NewStructAssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNewStructAssign(this);
}


std::any StcParser::NewStructAssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitNewStructAssign(this);
  else
    return visitor->visitChildren(this);
}

StcParser::NewStructAssignContext* StcParser::newStructAssign() {
  NewStructAssignContext *_localctx = _tracker.createInstance<NewStructAssignContext>(_ctx, getState());
  enterRule(_localctx, 10, StcParser::RuleNewStructAssign);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    match(StcParser::NEW);
    setState(117);
    match(StcParser::T__5);
    setState(118);
    match(StcParser::ID);
    setState(119);
    match(StcParser::ID);
    setState(120);
    match(StcParser::ASSIGN_OPERATOR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NewOperatorContext ------------------------------------------------------------------

StcParser::NewOperatorContext::NewOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StcParser::NewOperatorContext::NEW() {
  return getToken(StcParser::NEW, 0);
}

tree::TerminalNode* StcParser::NewOperatorContext::ID() {
  return getToken(StcParser::ID, 0);
}


size_t StcParser::NewOperatorContext::getRuleIndex() const {
  return StcParser::RuleNewOperator;
}

void StcParser::NewOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNewOperator(this);
}

void StcParser::NewOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNewOperator(this);
}


std::any StcParser::NewOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitNewOperator(this);
  else
    return visitor->visitChildren(this);
}

StcParser::NewOperatorContext* StcParser::newOperator() {
  NewOperatorContext *_localctx = _tracker.createInstance<NewOperatorContext>(_ctx, getState());
  enterRule(_localctx, 12, StcParser::RuleNewOperator);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(StcParser::NEW);
    setState(123);
    match(StcParser::T__5);
    setState(124);
    match(StcParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructContext ------------------------------------------------------------------

StcParser::StructContext::StructContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StcParser::StructContext::STRUCT_DEFINITION() {
  return getToken(StcParser::STRUCT_DEFINITION, 0);
}

tree::TerminalNode* StcParser::StructContext::ID() {
  return getToken(StcParser::ID, 0);
}

StcParser::StructBodyContext* StcParser::StructContext::structBody() {
  return getRuleContext<StcParser::StructBodyContext>(0);
}


size_t StcParser::StructContext::getRuleIndex() const {
  return StcParser::RuleStruct;
}

void StcParser::StructContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStruct(this);
}

void StcParser::StructContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStruct(this);
}


std::any StcParser::StructContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitStruct(this);
  else
    return visitor->visitChildren(this);
}

StcParser::StructContext* StcParser::struct_() {
  StructContext *_localctx = _tracker.createInstance<StructContext>(_ctx, getState());
  enterRule(_localctx, 14, StcParser::RuleStruct);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(StcParser::STRUCT_DEFINITION);
    setState(127);
    match(StcParser::ID);
    setState(128);
    structBody();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructElementContext ------------------------------------------------------------------

StcParser::StructElementContext::StructElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* StcParser::StructElementContext::ID() {
  return getToken(StcParser::ID, 0);
}

StcParser::VarTypeContext* StcParser::StructElementContext::varType() {
  return getRuleContext<StcParser::VarTypeContext>(0);
}


size_t StcParser::StructElementContext::getRuleIndex() const {
  return StcParser::RuleStructElement;
}

void StcParser::StructElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStructElement(this);
}

void StcParser::StructElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<StcListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStructElement(this);
}


std::any StcParser::StructElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<StcVisitor*>(visitor))
    return parserVisitor->visitStructElement(this);
  else
    return visitor->visitChildren(this);
}

StcParser::StructElementContext* StcParser::structElement() {
  StructElementContext *_localctx = _tracker.createInstance<StructElementContext>(_ctx, getState());
  enterRule(_localctx, 16, StcParser::RuleStructElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    match(StcParser::ID);
    setState(131);
    varType();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StructBodyContext ------------------------------------------------------------------
